@@ -14,16 +14,16 @@ ENV INSTALL_DIR ${INSTALL_DIR}
 ENV SCRIPTS_DIR ${SCRIPTS_DIR}
 
 ARG WILDDUCK_GIT_REPO=https://github.com/nodemailer/wildduck.git
-ARG WILDDUCK_GIT_CID=a8211adc56cb331906bc363c8f48034986ce6b94
+ARG WILDDUCK_GIT_CID=9c61d147dfeaf773876ff4c06c552eeb9448d9f8
 
 ARG HARAKA_VERSION=2.8.25
 ARG HARAKA_WD_PLUGIN_GIT_REPO=https://github.com/nodemailer/haraka-plugin-wildduck.git
-ARG HARAKA_WD_PLUGIN_GIT_CID=c085d726a5e083abe872dac9dd132cc54ddd7909
+ARG HARAKA_WD_PLUGIN_GIT_CID=9091e67f0716c3b078c98d51d4df93c5555958f8
 
 ARG ZONEMTA_GIT_REPO=https://github.com/zone-eu/zone-mta-template.git
-ARG ZONEMTA_GIT_CID=5b697fb6aa6bfb604212f31d59bb926bd7845255
+ARG ZONEMTA_GIT_CID=a9a175d7533faa5de074671070eeb671341f96e4
 ARG ZONEMTA_WD_PLUGIN_GIT_REPO=https://github.com/nodemailer/zonemta-wildduck.git
-ARG ZONEMTA_WD_PLUGIN_GIT_CID=695ca8a19a3c3e8212de1136a73beb58db6453c4
+ARG ZONEMTA_WD_PLUGIN_GIT_CID=4ba8f8b17a5592ef08dc6199140cb4abdaed3e2d
 
 COPY ./scripts/[0-9][0-9]-*.sh ${SCRIPTS_DIR}/
 # Scripts are named like: {ORDER PREFIX}-{NAME}.sh.
